feat: implement stream and query on cdc client