@@ -16,6 +16,7 @@
  */
 package org.neo4j.cdc.client.pattern;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -24,35 +25,42 @@ import org.neo4j.cdc.client.selector.NodeSelector;
 import org.neo4j.cdc.client.selector.Selector;
 
 public class NodePattern implements Pattern {
+    @NotNull
     private final Set<String> labels;
+
+    @NotNull
     private final Map<String, Object> keyFilters;
+
+    @NotNull
     private final Set<String> includeProperties;
+
+    @NotNull
     private final Set<String> excludeProperties;
 
     public NodePattern(
-            Set<String> labels,
-            Map<String, Object> keyFilters,
-            Set<String> includeProperties,
-            Set<String> excludeProperties) {
-        this.labels = labels;
-        this.keyFilters = keyFilters;
-        this.includeProperties = includeProperties;
-        this.excludeProperties = excludeProperties;
+            @NotNull Set<String> labels,
+            @NotNull Map<String, Object> keyFilters,
+            @NotNull Set<String> includeProperties,
+            @NotNull Set<String> excludeProperties) {
+        this.labels = Objects.requireNonNull(labels);
+        this.keyFilters = Objects.requireNonNull(keyFilters);
+        this.includeProperties = Objects.requireNonNull(includeProperties);
+        this.excludeProperties = Objects.requireNonNull(excludeProperties);
     }
 
-    public Set<String> getLabels() {
+    public @NotNull Set<String> getLabels() {
         return labels;
     }
 
-    public Map<String, Object> getKeyFilters() {
+    public @NotNull Map<String, Object> getKeyFilters() {
         return keyFilters;
     }
 
-    public Set<String> getIncludeProperties() {
+    public @NotNull Set<String> getIncludeProperties() {
         return includeProperties;
     }
 
-    public Set<String> getExcludeProperties() {
+    public @NotNull Set<String> getExcludeProperties() {
         return excludeProperties;
     }
 
@@ -71,16 +79,26 @@ public class NodePattern implements Pattern {
 
     @Override
     public int hashCode() {
-        int result = labels != null ? labels.hashCode() : 0;
-        result = 31 * result + (keyFilters != null ? keyFilters.hashCode() : 0);
-        result = 31 * result + (includeProperties != null ? includeProperties.hashCode() : 0);
-        result = 31 * result + (excludeProperties != null ? excludeProperties.hashCode() : 0);
+        int result = labels.hashCode();
+        result = 31 * result + keyFilters.hashCode();
+        result = 31 * result + includeProperties.hashCode();
+        result = 31 * result + excludeProperties.hashCode();
         return result;
+    }
+
+    @Override
+    public String toString() {
+        return "NodePattern{" + "labels="
+                + labels + ", keyFilters="
+                + keyFilters + ", includeProperties="
+                + includeProperties + ", excludeProperties="
+                + excludeProperties + '}';
     }
 
     @NotNull
     @Override
     public Set<Selector> toSelector() {
-        return Set.of(new NodeSelector(null, null, labels, keyFilters, includeProperties, excludeProperties));
+        return Set.of(new NodeSelector(
+                null, Collections.emptySet(), labels, keyFilters, includeProperties, excludeProperties));
     }
 }
